Fix spacing in player info

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    justify-content: space-evenly;
+    justify-content: center;
     height: 100%;
 }
 .game-info .player-info-container .player1-card,
@@ -65,6 +65,8 @@ body
 .game-info .player-info-container .player-name
 {
     font-size: 2rem;
+    margin: 0;
+    padding: 0;
 }
 #p1nameinp,
 #p2nameinp
